clean up codebase

--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,8 @@ figures/
 img_templates/
 img_templates/all_feat/
 #results
-datasets/
-datasets_inst/
+datasets
+datasets_inst
 results/
 linear_probe_logs/
 train_results/
